<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="310dp"
    android:layout_height="236dp"
    android:background="@drawable/background_white_corner_button"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/popup_window_change_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_name"
        android:textSize="16sp"
        android:textColor="@color/blue"
        android:layout_marginTop="30dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/popup_window_change_name_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/popup_window_change_name_et"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/folder_name"
        android:textSize="18sp"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:maxLength="10"
        android:textCursorDrawable="@color/blue"
        android:textColorHint="@color/gray"
        android:theme="@style/EditTheme"
        android:selectAllOnFocus="true"
        android:layout_marginTop="20dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/popup_window_change_name_tv"
        app:layout_constraintBottom_toBottomOf="@+id/popup_window_change_name_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/popup_window_change_name_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/change_name_button"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:background="@drawable/button_change_name"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/popup_window_change_name_et"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>