<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_chat_default_new_date_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/item_chat_default_profile_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:id="@+id/item_chat_default_new_date_time_line_1_view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/dark_gray"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/item_chat_default_new_date_time_tv" />

        <TextView
            android:id="@+id/item_chat_default_new_date_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/date_time"
            android:textColor="@color/dark_gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_chat_default_new_date_time_line_1_view"
            app:layout_constraintEnd_toStartOf="@+id/item_chat_default_new_data_time_line_2_view" />

        <View
            android:id="@+id/item_chat_default_new_data_time_line_2_view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/dark_gray"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_chat_default_new_date_time_tv"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/item_chat_default_profile_iv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_profile_black_no_circle"
        android:background="@drawable/background_profile_circle"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/item_chat_default_new_date_time_layout"
        app:layout_constraintBottom_toBottomOf="@+id/item_chat_default_message_tv"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/item_chat_default_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/item_chat_default_new_date_time_layout"
        app:layout_constraintStart_toEndOf="@+id/item_chat_default_profile_iv" />

    <TextView
        android:id="@+id/item_chat_default_message_tv"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_chat_default"
        android:text="@string/message"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:gravity="center_vertical"
        android:layout_marginTop="-10dp"
        app:layout_constraintStart_toStartOf="@+id/item_chat_default_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/item_chat_default_name_tv" />

    <TextView
        android:id="@+id/item_chat_default_date_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_time"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@+id/item_chat_default_message_tv"
        app:layout_constraintEnd_toEndOf="@+id/item_chat_default_message_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>